--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,47 @@
 /*  your css code here. If applicable */
+body{
+	background-color: rgb(204, 204, 204);
+}
+h1{
+	text-align: center;
+}
+h2{
+	text-align: center;
+}
+li{
+	list-style: none;
+}
+.list{
+	background-color: white;
+	border: 1px solid black;
+	margin: auto;
+	padding: auto;
+	border-radius: 5px;
+}
+.music{
+	background-color:white;
+	border: 1px solid black;
+	border-radius: 5px;
+	width: 600px;
+	height: 550px;
+	margin: auto;
+}
+.player_one{
+	margin: auto;
+	padding: 20px;
+	height: 350px;
+	width: 550px;
+}
+h3{
+	text-align: center;
+	margin-top: 1px;
+}
+p{
+	padding-left: 20px;
+}
+.player_two{
+	width: 550px;
+	margin: auto;
+	padding-left: 20px;
+}
+
